# conversational-AI-course

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_all.txt
data_txt/: code.txt
src/: app.py  main.py  natasha_ner.py  rag.py  reader.py  retriever.py  sqlite3_db.py  test.py  toxicity_classifier.py  utils.py
src/nlu/: toxicity_classifier.py
